<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
    <class>MainWindow</class>
    <widget class="QMainWindow" name="MainWindow">
        <property name="geometry">
            <rect>
                <x>0</x>
                <y>0</y>
                <width>481</width>
                <height>261</height>
            </rect>
        </property>
        <property name="minimumSize">
            <size>
                <width>481</width>
                <height>261</height>
            </size>
        </property>
        <property name="maximumSize">
            <size>
                <width>481</width>
                <height>261</height>
            </size>
        </property>
        <property name="windowTitle">
            <string>Лабораторная работа 12: Шифр Вермана</string>
        </property>
        <widget class="QWidget" name="centralwidget">
            <widget class="QTextEdit" name="plain_text">
                <property name="geometry">
                    <rect>
                        <x>10</x>
                        <y>10</y>
                        <width>461</width>
                        <height>81</height>
                    </rect>
                </property>
                <property name="inputMethodHints">
                    <set>Qt::ImhMultiLine</set>
                </property>
            </widget>
            <widget class="QTextEdit" name="cipher_text">
                <property name="geometry">
                    <rect>
                        <x>10</x>
                        <y>100</y>
                        <width>461</width>
                        <height>81</height>
                    </rect>
                </property>
            </widget>
            <widget class="QPushButton" name="proc_button">
                <property name="geometry">
                    <rect>
                        <x>380</x>
                        <y>190</y>
                        <width>91</width>
                        <height>41</height>
                    </rect>
                </property>
                <property name="text">
                    <string>Обработать</string>
                </property>
            </widget>
            <widget class="QLineEdit" name="line_key">
                <property name="geometry">
                    <rect>
                        <x>120</x>
                        <y>190</y>
                        <width>251</width>
                        <height>41</height>
                    </rect>
                </property>
                <property name="echoMode">
                    <enum>QLineEdit::Normal</enum>
                </property>
                <property name="placeholderText">
                    <string>Ключ</string>
                </property>
            </widget>
            <widget class="QRadioButton" name="btn_enc">
                <property name="enabled">
                    <bool>true</bool>
                </property>
                <property name="geometry">
                    <rect>
                        <x>10</x>
                        <y>190</y>
                        <width>121</width>
                        <height>22</height>
                    </rect>
                </property>
                <property name="text">
                    <string>Зашифровать</string>
                </property>
            </widget>
            <widget class="QRadioButton" name="btn_dec">
                <property name="geometry">
                    <rect>
                        <x>10</x>
                        <y>210</y>
                        <width>101</width>
                        <height>22</height>
                    </rect>
                </property>
                <property name="text">
                    <string>Расшифровать</string>
                </property>
            </widget>
        </widget>
        <widget class="QMenuBar" name="menuBar">
            <property name="geometry">
                <rect>
                    <x>0</x>
                    <y>0</y>
                    <width>481</width>
                    <height>21</height>
                </rect>
            </property>
            <widget class="QMenu" name="menuFile">
                <property name="title">
                    <string>Файл</string>
                </property>
                <addaction name="open_file"/>
                <addaction name="save_file"/>
            </widget>
            <addaction name="menuFile"/>
        </widget>
        <action name="open_file">
            <property name="text">
                <string>Открыть</string>
            </property>
        </action>
        <action name="save_file">
            <property name="text">
                <string>Сохранить</string>
            </property>
        </action>
    </widget>
    <resources/>
    <connections/>
</ui>
